fix tests after merge